# SimpleGameEngine

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmessage  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: 3rd.cmake  add_header.cmake  compile_config.cmake  config.h.in  config.json.in  functions.cmake  project_config.cmake
crates/app/: Cargo.toml
crates/app/src/: engine.rs  game.rs  lib.rs  schedule.rs
crates/app/tests/: engine_lifecycle.rs  headless_game.rs
crates/editor/: Cargo.toml
crates/editor/src/: app.rs  lib.rs  main.rs  model.rs  viewport.rs
crates/editor/src/app/: file_workflow.rs  fonts.rs  panels.rs  project.rs  tests.rs
crates/editor/src/model/: tests.rs  validation.rs
crates/editor/src/viewport/: camera.rs  gizmo.rs  grid.rs  orientation_cube.rs  tests.rs  wgpu_bridge.rs
crates/editor/tests/: editor_model.rs
crates/player/: Cargo.toml
crates/player/src/: host.rs  lib.rs
crates/player/tests/: player_session.rs
crates/project/: Cargo.toml
crates/project/src/: descriptor.rs  io.rs  lib.rs  manifest.rs
crates/project/tests/: project_bootstrap.rs  project_format_io.rs  project_formats.rs  project_io.rs
crates/project/tests/support/: manifest.rs  mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  main.rs
crates/runtime/tests/: load_scene.rs
crates/scene/: Cargo.toml
crates/scene/src/: lib.rs
crates/scene/tests/: scene_roundtrip.rs
crates/sge-app/: Cargo.toml
crates/sge-app/src/: game.rs  lib.rs  time.rs
crates/sge-app/tests/: headless_game.rs
crates/sge-asset/: Cargo.toml
crates/sge-asset-pipeline/: Cargo.toml
crates/sge-asset-pipeline/src/: cache.rs  closure.rs  cook.rs  lib.rs  obj.rs  output.rs  png.rs  publish.rs
crates/sge-asset-pipeline/src/cache/: tests.rs
crates/sge-asset-pipeline/src/closure/: tests.rs
crates/sge-asset-pipeline/src/publish/: tests.rs
crates/sge-asset-pipeline/tests/: determinism.rs  full_cook.rs  import_project_assets.rs  png_import.rs  publication.rs  source_free.rs  texture_cook.rs
crates/sge-asset-pipeline/tests/support/: mod.rs
crates/sge-asset/src/: lib.rs  mesh.rs  runtime_catalog.rs  runtime_content.rs  runtime_path.rs  runtime_store.rs  texture.rs
crates/sge-asset/src/runtime_catalog/: tests.rs
crates/sge-asset/tests/: asset_contract.rs  mesh_asset.rs  runtime_catalog.rs  runtime_content.rs  runtime_generation.rs  runtime_store.rs  texture_asset.rs
crates/sge-editor/: Cargo.toml
crates/sge-editor/i18n/: en.json  zh-CN.json
crates/sge-editor/src/: build.rs  error.rs  host.rs  input.rs  inspector.rs  inspector_ui.rs  lib.rs  localization.rs  play.rs  preview.rs  session.rs  viewport.rs
crates/sge-editor/src/host/: actions.rs  app.rs  files.rs  panels.rs  performance.rs  shortcuts.rs  test_support.rs
crates/sge-editor/src/host/panels/: hierarchy.rs  inspector.rs
crates/sge-editor/src/localization/: tests.rs
crates/sge-editor/src/session/: mutation.rs
crates/sge-editor/src/viewport/: actor_visuals.rs  gizmo.rs  overlays.rs  tests.rs  view_cube.rs
crates/sge-editor/tests/: asset_lifecycle.rs  edit_session.rs  session.rs
crates/sge-player/: Cargo.toml
crates/sge-player/src/: host.rs  input.rs  lib.rs
crates/sge-player/tests/: player_session.rs
crates/sge-render/: Cargo.toml
crates/sge-render/src/: backend.rs  components.rs  cpu.rs  extract.rs  frame_rate.rs  lib.rs  performance.rs  plugin.rs  settings.rs  snapshot.rs  surface.rs
crates/sge-render/src/cpu/: clip.rs  mod.rs  raster.rs  shade.rs  tests.rs
crates/sge-render/src/gpu/: assets.rs  errors.rs  frame.rs  mod.rs  pipeline.rs  projection.rs  renderer.rs  shader.wgsl  tests.rs
crates/sge-render/tests/: component_contract.rs  cpu_contract.rs  gpu_contract.rs  scene_roundtrip.rs  snapshot_contract.rs
crates/sge-scene/: Cargo.toml
crates/sge-scene/src/: document.rs  id.rs  lib.rs  name.rs  runtime.rs  snapshot.rs  transfer.rs  validation.rs
crates/sge-scene/src/validation/: component.rs  error.rs  graph.rs  prepared.rs
crates/sge-scene/tests/: project_data_roundtrip.rs  runtime_scene.rs  runtime_scene_transfer.rs  scene_format.rs  scene_prepare.rs  scene_prepare_decode.rs  scene_prepare_fields.rs  scene_prepare_references.rs  scene_snapshot.rs  scene_snapshot_failures.rs  scene_transfer.rs  scene_validation.rs
crates/sge-scene/tests/project_data_support/: mod.rs
crates/sge-scene/tests/support/: mod.rs
doc/: CMakeLists.txt
examples/demo_game/editor/: Cargo.toml
examples/demo_game/editor/i18n/: en.json  zh-CN.json
examples/demo_game/editor/src/: localization.rs  main.rs
examples/demo_game/editor/tests/: editor_product.rs
examples/demo_game/game/: Cargo.toml
examples/demo_game/game/src/: components.rs  lib.rs  systems.rs
examples/demo_game/game/tests/: gameplay.rs
examples/demo_game/player/: Cargo.toml
examples/demo_game/player/src/: main.rs
examples/demo_game/player/tests/: demo_product.rs
src/: CMakeLists.txt  README.md  log.cpp  main.cpp
src/core/: CMakeLists.txt
src/core/application/: application.cpp  application.h  application_base.h
src/core/config/: config.cpp  config.h
src/core/exception/: exception.h
src/core/include/: log.h
src/core/log/: log_system.cpp  log_system.h
src/core/utils/: singleton.h
src/function/: CMakeLists.txt
src/function/global/: global_context.h
src/include/: exception.hpp  log.h
src/platform/: CMakeLists.txt
src/platform/bgfx/: helloworld.cpp  helloworld_mt.cpp  logo.h
src/platform/file_system/: path.cpp  path.h
src/platform/rhi/: bgfx.cpp  bgfx.h  imgui_impl_bgfx.cpp  rhi.h  rhi_struct.h
src/platform/vulkan/: EasyVKStart.h  GlfwGeneral.hpp  VKBase.h
src/platform/window_system/: imgui_sdl2.cpp  imgui_sdl2.h  window_system.cpp  window_system.h
src/shader/: CMakeLists.txt  shaders.inc  shaders.inc.in  v_simple.sc
src/utils/: CMakeLists.txt
src/utils/config/: config.cpp  config.h
src/utils/exception/: exception.h
src/utils/log/: log_system.cpp  log_system.h
(+104 files in other folders)
