[workspace]
members = [
  "crates/app",
  "crates/asset",
  "crates/ecs",
  "crates/editor",
  "crates/input",
  "crates/math",
  "crates/render",
  "crates/runtime",
  "crates/scene",
  "crates/sge-ecs",
  "crates/window",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/MRNIU/SimpleGameEngine"

[workspace.dependencies]
anyhow = "1"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.35.0"
glam = { version = "0.33.2", features = ["serde"] }
ron = "0.12.2"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
tobj = "4.0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
wgpu = "29.0.4"
winit = "0.30.13"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = "warn"
