[workspace]
members = [
  "crates/app",
  "crates/build",
  "crates/input",
  "crates/math",
  "crates/player",
  "crates/project",
  "crates/reflect",
  "crates/sge-asset",
  "crates/sge-asset-pipeline",
  "crates/sge-ecs",
  "crates/sge-editor",
  "crates/sge-render",
  "crates/sge-scene",
  "examples/demo_game/game",
  "examples/demo_game/editor",
  "examples/demo_game/player",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/MRNIU/SimpleGameEngine"

[workspace.dependencies]
atomic-write-file = "0.3.0"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
glam = { version = "0.33.2", features = ["serde"] }
ron = "0.12.2"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
thiserror = "2.0.18"
tobj = "4.0.4"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
wgpu = "29.0.4"
winit = "0.30.13"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = "warn"
