[package]
name = "app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ecs = { path = "../ecs" }
input = { path = "../input" }
render = { path = "../render" }
window = { path = "../window" }
tracing.workspace = true

[lints]
workspace = true
