[package]
name = "editor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
app = { path = "../app" }
asset = { path = "../asset" }
ecs = { path = "../ecs" }
eframe.workspace = true
egui.workspace = true
sge-math = { path = "../math" }
render = { path = "../render" }
rfd.workspace = true
ron.workspace = true
scene = { path = "../scene" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
