[package]
name = "sge-player"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sge-app = { path = "../app" }
sge-asset = { path = "../sge-asset" }
sge-input = { path = "../input" }
sge-render = { path = "../sge-render" }
sge-scene = { path = "../sge-scene" }
thiserror.workspace = true

[dev-dependencies]
sge-asset-pipeline = { path = "../sge-asset-pipeline" }
sge-math = { path = "../math" }
sge-project = { path = "../project" }
sge-reflect = { path = "../reflect" }

[lints]
workspace = true
