[package]
name = "sge-project"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
atomic-write-file.workspace = true
ron.workspace = true
serde.workspace = true
sge-asset = { path = "../sge-asset" }
sge-reflect = { path = "../reflect" }
thiserror.workspace = true

[lints]
workspace = true
