[package]
name = "runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
app = { path = "../app" }
render = { path = "../render" }
scene = { path = "../scene" }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
