[package]
name = "scene"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
asset = { path = "../asset" }
ecs = { path = "../ecs" }
math = { path = "../math" }
ron.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
