[package]
name = "sge-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sge-ecs = { path = "../sge-ecs" }
sge-input = { path = "../sge-input" }
sge-reflect = { path = "../sge-reflect" }
thiserror.workspace = true

[lints]
workspace = true
