[package]
name = "sge-asset-pipeline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ron.workspace = true
serde.workspace = true
sha2.workspace = true
sge-asset = { path = "../sge-asset" }
sge-project = { path = "../project" }
thiserror.workspace = true
tobj.workspace = true

[lints]
workspace = true
