[package]
name = "sge-asset-pipeline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
atomic-write-file.workspace = true
ron.workspace = true
serde.workspace = true
sha2.workspace = true
sge-asset = { path = "../sge-asset" }
sge-ecs = { path = "../sge-ecs" }
sge-project = { path = "../project" }
sge-reflect = { path = "../reflect" }
sge-scene = { path = "../sge-scene" }
thiserror.workspace = true
tobj.workspace = true

[dev-dependencies]
sge-app = { path = "../app" }

[lints]
workspace = true
