[package]
name = "sge-asset"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
sge-reflect = { path = "../reflect" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
ron.workspace = true

[lints]
workspace = true
