[package]
name = "sge-asset"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ron.workspace = true
serde.workspace = true
sha2.workspace = true
sge-reflect = { path = "../reflect" }
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
