[package]
name = "sge-editor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eframe.workspace = true
sge-app = { path = "../app" }
sge-asset = { path = "../sge-asset" }
sge-asset-pipeline = { path = "../sge-asset-pipeline" }
sge-input = { path = "../input" }
sge-math = { path = "../math" }
sge-project = { path = "../project" }
sge-render = { path = "../sge-render" }
sge-reflect = { path = "../reflect" }
sge-scene = { path = "../sge-scene" }
thiserror.workspace = true

[dev-dependencies]
demo-game = { path = "../../examples/demo_game/game" }

[lints]
workspace = true
