[package]
name = "sge-editor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eframe.workspace = true
image.workspace = true
sge-app = { path = "../sge-app" }
sge-asset = { path = "../sge-asset" }
sge-asset-pipeline = { path = "../sge-asset-pipeline" }
sge-ecs = { path = "../sge-ecs" }
sge-input = { path = "../sge-input" }
sge-math = { path = "../sge-math" }
sge-project = { path = "../sge-project" }
sge-render = { path = "../sge-render" }
sge-reflect = { path = "../sge-reflect" }
sge-scene = { path = "../sge-scene" }
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal"] }

[dev-dependencies]
demo-game = { path = "../../examples/demo_game/game" }

[lints]
workspace = true
