[package]
name = "sge-player"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sge-app = { path = "../sge-app" }
sge-asset = { path = "../sge-asset" }
sge-input = { path = "../sge-input" }
sge-render = { path = "../sge-render" }
sge-scene = { path = "../sge-scene" }
image.workspace = true
thiserror.workspace = true
winit.workspace = true

[dev-dependencies]
sge-asset-pipeline = { path = "../sge-asset-pipeline" }
sge-math = { path = "../sge-math" }
sge-project = { path = "../sge-project" }
sge-reflect = { path = "../sge-reflect" }

[lints]
workspace = true
