[package]
name = "sge-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sge-app = { path = "../app" }
sge-asset = { path = "../sge-asset" }
sge-ecs = { path = "../sge-ecs" }
sge-math = { path = "../math" }
sge-reflect = { path = "../reflect" }
pollster.workspace = true
raw-window-handle.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
sge-scene = { path = "../sge-scene" }

[lints]
workspace = true
