[package]
name = "sge-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sge-app = { path = "../sge-app" }
sge-asset = { path = "../sge-asset" }
sge-ecs = { path = "../sge-ecs" }
sge-math = { path = "../sge-math" }
sge-reflect = { path = "../sge-reflect" }
pollster.workspace = true
raw-window-handle.workspace = true
rayon.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
sge-scene = { path = "../sge-scene" }

[lints]
workspace = true
