[package]
name = "sge-scene"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ron.workspace = true
serde.workspace = true
sge-asset = { path = "../sge-asset" }
sge-ecs = { path = "../sge-ecs" }
sge-reflect = { path = "../reflect" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
sge-app = { path = "../app" }
sge-project = { path = "../project" }

[lints]
workspace = true
