
# This file is a part of Simple-XX/SimpleGameEngine
# (https://github.com/Simple-XX/SimpleGameEngine).
#
# CMakeLists.txt for Simple-XX/SimpleGameEngine.

# add_library(function
#         log.cpp
# )

# target_include_directories(function PRIVATE
#         include
# )

# target_compile_options(function PRIVATE
#         ${DEFAULT_COMPILE_OPTIONS}
# )

# target_link_libraries(function PRIVATE
#         ${DEFAULT_LINK_LIB}
# )
