[package]
name = "demo-game-editor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
demo-game = { path = "../game" }
rfd = "0.17.2"
sge-editor = { path = "../../../crates/sge-editor" }
sge-project = { path = "../../../crates/project" }

[lints]
workspace = true
