[package]
name = "demo-game"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sge-app = { path = "../../../crates/app" }
sge-input = { path = "../../../crates/input" }
sge-math = { path = "../../../crates/math" }
sge-reflect = { path = "../../../crates/reflect" }
sge-render = { path = "../../../crates/sge-render" }
sge-scene = { path = "../../../crates/sge-scene" }

[lints]
workspace = true
