[package]
name = "demo-game-player"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
demo-game = { path = "../game" }
sge-player = { path = "../../../crates/player" }

[dev-dependencies]
sge-asset = { path = "../../../crates/sge-asset" }
sge-asset-pipeline = { path = "../../../crates/sge-asset-pipeline" }
sge-project = { path = "../../../crates/project" }

[lints]
workspace = true
