[package]
name = "demo-game-player"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
demo-game = { path = "../game" }
sge-player = { path = "../../../crates/sge-player" }

[dev-dependencies]
image.workspace = true
sge-asset = { path = "../../../crates/sge-asset" }
sge-asset-pipeline = { path = "../../../crates/sge-asset-pipeline" }
sge-input = { path = "../../../crates/sge-input" }
sge-project = { path = "../../../crates/sge-project" }

[lints]
workspace = true
